LA2.0 | valid initial build

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,12 +1,15 @@
-# Use H2 in-memory for tests
+# Use H2 in-memory DB
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MySQL
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# Hibernate auto-create/drop for test isolation
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=false
-
-# Disable Flyway in tests (H2 schema will be auto-created)
+# Disable Flyway in tests (we?ll let Hibernate create tables)
 spring.flyway.enabled=false
+
+# Let Hibernate generate/drop the schema for us
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# (optional) suppress SQL logs in tests
+spring.jpa.show-sql=false
+logging.level.org.hibernate.SQL=ERROR
