--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/vehicles
-    username: root
-    password: password
+    username: vehicle_api
+    password: vehicle_api
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
@@ -17,7 +17,3 @@ server:
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
-
-flyway:
-  enabled: true
-  locations: classpath:db/migration
